RESOLVED FIXED52573
REGRESSION (r75262): Crash beneath WKCACFContextFlusher::flushAllContexts when resizing window on page that uses accelerated compositing
https://bugs.webkit.org/show_bug.cgi?id=52573
Summary REGRESSION (r75262): Crash beneath WKCACFContextFlusher::flushAllContexts whe...
Adam Roben (:aroben)
Reported 2011-01-17 06:58:49 PST
REGRESSION (r75262): Crash beneath WKCACFContextFlusher::flushAllContexts when resizing window on page that uses accelerated compositing
Attachments
Patch (1.88 KB, patch)
2011-01-17 06:59 PST, Adam Roben (:aroben)
simon.fraser: review+
Adam Roben (:aroben)
Comment 1 2011-01-17 06:59:49 PST
Adam Roben (:aroben)
Comment 2 2011-01-17 17:52:12 PST
Note You need to log in before you can comment on or make changes to this bug.